--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,32 @@
-body {
+* {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "PT Serif", serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  background: #f5f5f5;
+}
+
+button,
+a {
+  all: unset;
+  cursor: pointer;
+}
+
+button {
+  font-size: 1.9rem;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 30% repeat(4, 10%) 30%;
+  border-bottom: 1px solid;
+  align-items: center;
+  justify-items: center;
+}
+
+.theme-icon {
+  display: flex;
+  justify-self: end;
 }
